SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=1024793

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -1,20 +1,40 @@
 [Desktop Entry]
 Name=DBUSCalendar
+Name[bg]=DBUSCalendar
+Name[ca]=DBUSCalendar
+Name[cs]=DBUSCalendar
+Name[da]=DBUSCalendar
 Name[de]=D-Bus-Kalender
 Name[el]=Ημερολόγιο DBUS
+Name[en_GB]=DBUSCalendar
 Name[es]=Calendario DBUS
+Name[et]=DBUSCalendar
+Name[fr]=DBUSCalendar
 Name[ga]=Féilire DBUS
 Name[gl]=Calendario DBUS
 Name[hu]=D-Bus-naptár
+Name[it]=DBUSCalendar
 Name[ja]=D-Bus カレンダー
+Name[km]=DBUSCalendar
+Name[ko]=DBUSCalendar
 Name[lt]=DBUSkalendorius
+Name[lv]=DBUSCalendar
 Name[nb]=DBUSKalender
 Name[nds]=D-Bus-Kalenner
+Name[nl]=DBUSCalendar
+Name[nn]=DBUSCalendar
+Name[pa]=DBUSCalendar
 Name[pl]=KalendarzDBUS
 Name[pt]=Calendário DBUS
+Name[pt_BR]=DBUSCalendar
 Name[ro]=CalendarDBUS
+Name[ru]=DBUSCalendar
+Name[sl]=DBUSCalendar
 Name[sv]=DBus-kalender
+Name[tr]=DBUSCalendar
+Name[uk]=DBUSCalendar
 Name[x-test]=xxDBUSCalendarxx
+Name[zh_CN]=DBUSCalendar
 Name[zh_TW]=DBUS行事曆
 Type=ServiceType
 X-KDE-ServiceType=DBUS/Organizer
