--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -5,6 +5,7 @@ Name[cs]=Rozhraní dekorace kalendáře
 Name[da]=Kalenderdekorations-plugin
 Name[de]=Dekoration für den Kalender
 Name[el]=Διασύνδεση διακόσμησης ημερολογίου
+Name[en_GB]=Calendar Decoration Interface
 Name[es]=Interfaz de decoración del calendario
 Name[et]=Kalendri dekoratsiooni liides
 Name[fr]=Interface de décoration d'agenda
@@ -46,6 +47,7 @@ Comment[cy]=Ategyn Addurniad Calendr
 Comment[da]=Calendar-dekorations-plugin
 Comment[de]=Dekoration für den Kalender
 Comment[el]=Πρόσθετο διακόσμησης ημερολογίου
+Comment[en_GB]=Calendar Decoration Plugin
 Comment[eo]=Kalendarornama kromaĵo
 Comment[es]=Complemento de decoración del calendario
 Comment[et]=Kalendri dekoratsiooni plugin
