--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -20,6 +20,8 @@ Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
 Name[da]=Fri/Optaget
 Name[de]=Frei/Belegt
+Name[el]=Free/Busy
+Name[en_GB]=Free/Busy
 Name[eo]=Libera/Okupita
 Name[es]=Libre/Ocupado
 Name[et]=Vaba/hõivatud
@@ -76,6 +78,7 @@ Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
 Comment[da]=KOrganizer Fri/Optaget-indstilling
 Comment[de]=Frei/Belegt-Festlegung für KOrganizer
 Comment[el]=Ρυθμίσεις KOrganizer Free/Busy
+Comment[en_GB]=KOrganizer Free/Busy Configuration
 Comment[eo]=KOrganizilo Agordo pri libero/okupito
 Comment[es]=Configuración de libre/ocupado de KOrganizer
 Comment[et]=KOrganizeri vaba/hõivatuse seadistused
