--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -21,6 +21,7 @@ Name[cy]=Trefnlennu Grŵp
 Name[da]=Gruppeskemalægning
 Name[de]=Gruppenplanung
 Name[el]=Προγραμματισμός ομάδας
+Name[en_GB]=Group Scheduling
 Name[es]=Planificación de grupos
 Name[et]=Grupitöö ajakavad
 Name[eu]=Talde antolaketa
@@ -73,6 +74,7 @@ Comment[cy]=Ffurfweddiad Trefnlennu Grŵp KTrefnydd
 Comment[da]=KOrganizer gruppeskemalægning indstilling
 Comment[de]=Einrichtung von Gruppen-Planungen für KOrganizer
 Comment[el]=Ρύθμιση προγραμματισμού ομάδας του KOrganizer
+Comment[en_GB]=KOrganizer Group Scheduling Configuration
 Comment[es]=Configuración de la planificación de grupos de KOrganizer
 Comment[et]=Korganizeri grupitöö ajakavade seadistamine
 Comment[eu]=KOrganizer-en talde antolaketaren konfigurazioa
