--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -22,6 +22,7 @@ Name[cy]=Ategion
 Name[da]=Plugin
 Name[de]=Module
 Name[el]=Πρόσθετα
+Name[en_GB]=Plugins
 Name[eo]=Kromaĵoj
 Name[es]=Complementos
 Name[et]=Pluginad
@@ -29,6 +30,7 @@ Name[eu]=Plugin-ak
 Name[fa]=وصله‌ها
 Name[fi]=Liitännäiset
 Name[fr]=Modules externes
+Name[fy]=Plugins
 Name[ga]=Breiseáin
 Name[gl]=Engadidos
 Name[he]=תוספים
@@ -47,6 +49,7 @@ Name[ms]=Plugin
 Name[nb]=Programtillegg
 Name[nds]=Modulen
 Name[ne]=प्लगइन
+Name[nl]=Plugins
 Name[nn]=Programtillegg
 Name[oc]=Ajustons
 Name[pa]=ਪਲੱਗਇਨਾਂ
@@ -76,6 +79,7 @@ Comment[cs]=Nastavení modulů KOrganizeru
 Comment[da]=KOrganizer plugin-indstilling
 Comment[de]=Modul-Einrichtung für KOrganizer
 Comment[el]=Ρύθμιση προσθέτων του KOrganizer
+Comment[en_GB]=KOrganizer Plugin Configuration
 Comment[eo]=KOrganizilo-Kromaĵagordo
 Comment[es]=Configuración de los complementos de KOrganizer
 Comment[et]=KOrganizeri pluginate seadistused
