--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -19,6 +19,7 @@ Name[cs]=Datum a čas
 Name[da]=Tid og dato
 Name[de]=Zeit und Datum
 Name[el]=Ώρα και Ημερομηνία
+Name[en_GB]=Time and Date
 Name[es]=Fecha y hora
 Name[et]=Kellaaeg ja kuupäev
 Name[fi]=Aika ja päiväys
@@ -58,6 +59,7 @@ Comment[cs]=Nastavení data a času pro KOrganizer
 Comment[da]=Konfiguration af tid og dato for KOrganizer
 Comment[de]=KOrganizer-Einstellungen für Zeit/Datum
 Comment[el]=Ρύθμιση ώρας και ημερομηνίας του KOrganizer
+Comment[en_GB]=KOrganizer Time and Date Configuration
 Comment[es]=Configuración de la fecha y hora de KOrganizer
 Comment[et]=KOrganizeri ajaseadistused
 Comment[fi]=KOrganizerin aika-asetukset
