--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -22,6 +22,7 @@ Name[cy]=Golygon
 Name[da]=Visninger
 Name[de]=Ansichten
 Name[el]=Προβολές
+Name[en_GB]=Views
 Name[eo]=Rigardoj
 Name[es]=Vistas
 Name[et]=Vaated
@@ -80,6 +81,7 @@ Comment[cy]=Ffurfweddiad Golygon KTrefnydd
 Comment[da]=KOrganizer visningsindstilling
 Comment[de]=Ansichts-Einstellungen für KOrganizer
 Comment[el]=Ρύθμιση προβολής του KOrganizer
+Comment[en_GB]=KOrganizer View Configuration
 Comment[eo]=KOrganizilo-Rigardagordo
 Comment[es]=Configuración de la vista de KOrganizer
 Comment[et]=KOrganizeri vaateseadistused
