--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -8,6 +8,7 @@ Name[cs]=Klient upomínek KOrganizeru
 Name[da]=KOrganizer-påmindelsesklient
 Name[de]=KOrganizer Erinnerungsfunktion
 Name[el]=Πελάτης υπενθύμισης του KOrganizer
+Name[en_GB]=KOrganizer Reminder Client
 Name[eo]=Alarmilo por Organizilo
 Name[es]=Cliente de recordatorio de KOrganizer
 Name[et]=KOrganizeri meeldetuletuse klientprogramm
