--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -9,6 +9,7 @@ Comment[cy]=Rhaglen Galendr a Drefnlennu
 Comment[da]=Kalender- og planlægningsprogram
 Comment[de]=Ein Kalender und Zeitplaner
 Comment[el]=Πρόγραμμα ημερολογίου και προγραμματισμού
+Comment[en_GB]=Calendar and Scheduling Program
 Comment[eo]=Kalendara kaj plana programo
 Comment[es]=Calendario y planificador
 Comment[et]=Kalendri ja ajakava haldamise rakendus
@@ -64,16 +65,61 @@ X-DocPath=korganizer/index.html
 Type=Service
 Name=KOrganizer
 Name[af]=Korganizer
+Name[bg]=KOrganizer
+Name[br]=KOrganizer
+Name[ca]=KOrganizer
+Name[cs]=KOrganizer
 Name[cy]=KTrefnydd
+Name[da]=KOrganizer
+Name[de]=KOrganizer
+Name[el]=KOrganizer
+Name[en_GB]=KOrganizer
 Name[eo]=KOrganizilo
+Name[es]=KOrganizer
+Name[et]=KOrganizer
+Name[eu]=KOrganizer
+Name[fi]=KOrganizer
+Name[fr]=KOrganizer
+Name[fy]=KOrganizer
+Name[ga]=KOrganizer
+Name[gl]=KOrganizer
+Name[he]=KOrganizer
+Name[hr]=KOrganizer
+Name[hu]=KOrganizer
+Name[is]=KOrganizer
+Name[it]=KOrganizer
+Name[ja]=KOrganizer
+Name[ka]=KOrganizer
+Name[kk]=KOrganizer
+Name[km]=KOrganizer
+Name[ko]=KOrganizer
+Name[lt]=KOrganizer
+Name[lv]=KOrganizer
 Name[mk]=КОрганизатор
+Name[ms]=KOrganizer
+Name[nb]=KOrganizer
+Name[nds]=KOrganizer
 Name[ne]=केडीई आयोजक
+Name[nl]=KOrganizer
+Name[nn]=KOrganizer
 Name[pa]=ਕੇ-ਪਰਬੰਧਕ
 Name[pl]=Organizator
+Name[pt]=KOrganizer
+Name[pt_BR]=KOrganizer
 Name[ro]=Organizator
+Name[ru]=KOrganizer
+Name[se]=KOrganizer
+Name[sk]=KOrganizer
+Name[sl]=KOrganizer
 Name[sv]=Korganizer
 Name[ta]=கேஅமைப்பாளர்
+Name[tg]=KOrganizer
+Name[tr]=KOrganizer
+Name[uk]=KOrganizer
+Name[vi]=KOrganizer
+Name[xh]=KOrganizer
 Name[x-test]=xxKOrganizerxx
+Name[zh_CN]=KOrganizer
 Name[zh_TW]=KOrganizer 行事曆
 X-KDE-ServiceTypes=Browser/View
 X-KDE-Library=korganizerpart
