--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -8,6 +8,7 @@ Name[cs]=Modul pro očíslování dat v kalendáři
 Name[da]=Datonumre-plugin for kalendere
 Name[de]=Kalendertag-Modul für Kalender
 Name[el]=Πρόσθετο αριθμού ημερών για Ημερολόγια
+Name[en_GB]=Date Numbers Plugin for Calendars
 Name[eo]=Datnumera kromaĵo por Kalendaro
 Name[es]=Complemento de números de fecha para calendarios
 Name[et]=Kuupäeva nummerdamise plugin kalendritele
@@ -57,6 +58,7 @@ Comment[cs]=tento modul pro každý den zobrazuje pořadí dne v roce na vrcholu
 Comment[da]=For hver dag viser dette plugin nummeret for dagen i året for oven i agendavisningen. For eksempel er 1. februar 1 is den 32. dag i året.
 Comment[de]=Für jeden Tag des Jahres wird mit diesem Modul der Kalendertag oben in der Tagesansicht angezeigt. Der 1. Februar ist beispielsweise der 32. Kalendertag des Jahres.
 Comment[el]=Για κάθε μέρα, αυτό το πρόσθετο εμφανίζει τον αύξοντα αριθμό της ημέρας του έτους στην προβολή προγράμματος εργασίας. Για παράδειγμα, η 1ι Φεβρουαρίου είναι η ημέρα 32 του έτους.
+Comment[en_GB]=For each day this plugin shows its daynumber of the year at the top of the agenda view. For example, February 1 is day 32 of the year.
 Comment[es]=Para cada día, este complemento muestra su número de día en el año en la parte superior de la vista de agenda. Por ejemplo, el 1 de febrero es el día número 32 del año.
 Comment[et]=See plugin näitab iga päevakavavaate ülaosas iga päeva järjekorranumbrit aastas. Näiteks 1. veebruar on aasta 32. päev.
 Comment[eu]=Egun bakoitzeko, plugin honek bere urteko egun-zenbakia erakutsiko du agenda ikuspegiaren goiko aldean. Adibidez, Otsailak 1 urtearen 32. eguna da.
