--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -7,6 +7,7 @@ Name[cs]=Wikipedia modul 'Obrázek dne' pro kalendáře
 Name[da]=Wikipedia dagens billede-plugin for kalendere
 Name[de]=Bild des Tages aus Wikipedia für den Kalender
 Name[el]=Πρόσθετο εικόνας της ημέρας της Wikipedia για Ημερολόγια
+Name[en_GB]=Wikipedia Picture Of the Day Plugin for Calendars
 Name[es]=Complemento de imagen del día de la Wikipedia para calendarios
 Name[et]=Wikipedia päevapildi plugin kalendritele
 Name[fa]=عکس ویکی پدیا از وصلۀ روز برای تقویمها
@@ -43,6 +44,7 @@ Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
 Comment[da]=Dette plugin viser Dagens billede fra Wikipedia
 Comment[de]=Dieses Modul stellt das Bild des Tages aus Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
+Comment[en_GB]=This plugin provides the Wikipedia Picture of the Day
 Comment[es]=Este complemento provee la Imagen del Día de Wikipedia
 Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[fr]=Ce module externe fourni l'image du jour de Wikipédia
