--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -2,11 +2,13 @@
 X-KDE-Library=korg_journalprint
 Name=Journal Print Style
 Name[af]=Joernaal druk styl
+Name[bg]=Journal Print Style
 Name[ca]=Estil d'impressió del diari
 Name[cs]=Tiskový styl deníku
 Name[da]=Journal udskriftsstil
 Name[de]=Journal-Druckstil
 Name[el]=Στυλ εκτύπωσης χρονικού
+Name[en_GB]=Journal Print Style
 Name[eo]=Ĵurnal-Presostilo
 Name[es]=Estilo de impresión del diario
 Name[et]=Päeviku trükkimise stiil
@@ -55,6 +57,7 @@ Comment[cs]=tento modul umožňuje tisk položek deníku.
 Comment[da]=Dette plugin gør at du kan udskrive journalindgange (dagbogsindgange).
 Comment[de]=Mit diesem Modul können Journaleinträge (Tagebucheinträge) gedruckt werden.
 Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε καταχωρήσεις χρονικού.
+Comment[en_GB]=This plugin allows you to print out journal entries (diary entries).
 Comment[es]=Este complemento le permite imprimir entradas del diario.
 Comment[et]=See plugin võimaldab trükkida päeviku sissekandeid.
 Comment[eu]=Plugin honek egunkarien sarrerak (eguneroko sarrerak) inprimatzeko aukera ematen dizu.
