--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -2,11 +2,13 @@
 X-KDE-Library=korg_yearprint
 Name=Yearly Print Style
 Name[af]=Druk styl: Jaarliks
+Name[bg]=Yearly Print Style
 Name[ca]=Estil d'impressió anual
 Name[cs]=Roční tiskový styl
 Name[da]=Yearly udskriftsstil
 Name[de]=Jahres-Druckstil
 Name[el]=Στυλ ετήσιας εκτύπωσης
+Name[en_GB]=Yearly Print Style
 Name[eo]=Pojara Presostilo
 Name[es]=Estilo de impresión anual
 Name[et]=Aastakalendri trükkimise stiil
@@ -50,6 +52,7 @@ Comment[cs]=Tento modul umožňuje tisk ročního kalendáře.
 Comment[da]=Dette plugin gør at du kan udskrive en årlig kalender
 Comment[de]=Mit diesem Modul können Jahresübersichten gedruckt werden.
 Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώσετε ένα ετήσιο ημερολόγιο.
+Comment[en_GB]=This plugin allows you to print out a yearly calendar.
 Comment[es]=Este complemento le permite imprimir un calendario anual.
 Comment[et]=See plugin võimaldab trükkida terve aasta kalendri.
 Comment[fa]=این وصله، به شما اجازه می‌دهد که مدخلهای نشریه )مدخلهای روزانه( را چاپ کنید.
