--- a/plugins/timespanview/timespanview.desktop
+++ b/plugins/timespanview/timespanview.desktop
@@ -2,11 +2,13 @@
 X-KDE-Library=korg_timespanview
 Name=Timespan View Plugin for KOrganizer
 Name[af]=Tydlyn aansig inprop module vir KOrganizer
+Name[bg]=Timespan View Plugin for KOrganizer
 Name[ca]=Connector de vista de període temporal per a KOrganizer
 Name[cs]=Modul časového pohledu pro KOrganizer
 Name[da]=Timespan-visning-plugin for KOrganizer
 Name[de]=Zeitspannenansicht-Modul für KOrganizer
 Name[el]=Πρόσθετο προβολής εργασιών του KOrganizer
+Name[en_GB]=Timespan View Plugin for KOrganizer
 Name[eo]=Tempgamrigardo-kromaĵo por Organizilo
 Name[es]=Complemento de visor de periodo de tiempo para KOrganizer
 Name[et]=KOrganizeri perioodivaate plugin
@@ -52,6 +54,7 @@ Comment[cs]=Tento modul umožňuje časový pohled pro korganizer (podobně jako
 Comment[da]=Pluginnet sørger for en tidsintervalsvisning i Korganizer (som ligner gøremål eller månedsvisning). Hvis du aktiverer dette plugin kan du skifte til tidsintervalvisning og vise dine begivenheder som i et Gantt-diagram.
 Comment[de]=Mit diesem Modul wird KOrganizer um eine Zeitspannenansicht (ähnlich der Aufgaben- und Monatsansicht) erweitert. Wenn Sie es einschalten, können Sie zur Zeitspannenansicht wechseln und sich Ihre Ereignisse wie in einem Gantt-Diagramm ansehen.
 Comment[el]=Αυτό το πρόσθετο παρέχει μία προβολή 'ανοίγματος' χρόνου για το korganizer (όπως οι μηνιαίες προβολές των προς υλοποίηση εργασιών). Αν το ενεργοποιήσετε, μπορείτε να αλλάξετε σε προβολή 'ανοίγματος' χρόνου και να δείτε τα γεγονότα σας όπως ένα διάγραμμα του Gantt.
+Comment[en_GB]=This plugin provides a timespan view for korganizer (like the to-do or month views). If you enable this plugin, you can switch to the timespan view and view your events like in a Gantt diagram.
 Comment[es]=Este complemento proporciona una vista de periodo de tiempo para KOrganizer (como la vista de tareas pendientes o la mensual). Si habilita este complemento, puede pasar a la vista de periodo de tiempo y ver sus eventos como un diagrama de Gantt.
 Comment[et]=See plugin lisab KOrganizerile perioodivaate (nagu ülesannete või kuuvaade). Selle lubamisel saab lülituda perioodivaatele ning näha oma sündmusi Gantti diagrammina.
 Comment[eu]=Plugin honek KOrganizer-entzat denbora barruti ikuspegi bat eskeintzen du. Plugin hau gaitzen baduzu denbora-barruti ikuspegira alda zaitezke gertaerak Gantt diagrama batean bezala ikusi.
