--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -5,6 +5,7 @@ Name[cs]=Rozhraní modulu kalendáře
 Name[da]=Kalenders plugin-grænseflade
 Name[de]=Kalender-Modulschnittstelle
 Name[el]=Διασύνδεση προσθέτου ημερολογίου
+Name[en_GB]=Calendar Plugin Interface
 Name[es]=Complemento de interfaz del calendario
 Name[et]=Kalendriplugina liides
 Name[fr]=Interface de module d'agenda
@@ -46,6 +47,7 @@ Comment[cy]=Ategyn Calendr
 Comment[da]=Calendar-plugin
 Comment[de]=Kalender-Modul
 Comment[el]=Πρόσθετο ημερολογίου
+Comment[en_GB]=Calendar Plugin
 Comment[eo]=Kalendaro-kromaĵo
 Comment[es]=Complemento de calendario
 Comment[et]=Kalendriplugin
