--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -5,6 +5,7 @@ Name[cs]=Rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer Part
 Name[de]=KOrganizer-Komponenten-Schnittstelle
 Name[el]=Διασύνδεση KOrganizer Part
+Name[en_GB]=KOrganizer Part Interface
 Name[es]=Interfaz de parte de KOrganizer
 Name[et]=KOrganizeri komponendi liides
 Name[fr]=Interface de composant KOrganizer
@@ -41,14 +42,20 @@ Comment[af]=Korganizer Deel
 Comment[bg]=Модул KOrganizer
 Comment[br]=Perzh KOrganizer
 Comment[ca]=Part de KOrganizer
+Comment[cs]=KOrganizer Part
 Comment[cy]=KTrefnydd Part
+Comment[da]=KOrganizer Part
 Comment[de]=KOrganizer-Komponente
+Comment[el]=KOrganizer Part
+Comment[en_GB]=KOrganizer Part
 Comment[eo]=Organizilo-parto
 Comment[es]=Parte de KOrganizer
 Comment[et]=KOrganizeri komponent
 Comment[eu]=KOrganizer zatia
 Comment[fa]=بخش KOrganizer
+Comment[fi]=KOrganizer Part
 Comment[fr]=Composant KOrganizer
+Comment[fy]=KOrganizer Part
 Comment[ga]=Comhpháirt KOrganizer
 Comment[gl]=Parte KOrganizer
 Comment[he]=רכיב KOrganizer
@@ -65,6 +72,7 @@ Comment[lt]=KOrganizer dalis
 Comment[lv]=KOrganizer daļa
 Comment[mk]=Дел од КОрганизатор
 Comment[ms]=Bahagian KOrganizer
+Comment[nb]=KOrganizer Part
 Comment[nds]=KOrganizer-Komponent
 Comment[ne]=केडीई आयोजक भाग
 Comment[nl]=KOrganizer-component
@@ -83,6 +91,7 @@ Comment[ta]=கேஅமைப்பாளர் பகுதி
 Comment[tg]=Қисмати органайзер
 Comment[tr]=KOrganizer Parçası
 Comment[uk]=Складова KOrganizer
+Comment[vi]=KOrganizer Part
 Comment[xh]=Indawana yeKOrganizer
 Comment[x-test]=xxKOrganizer Partxx
 Comment[zh_CN]=KOrganizer 部件
