--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -5,6 +5,7 @@ Name[cs]=Tiskové rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer print-plugin
 Name[de]=KOrganizer-Druckschnittstelle
 Name[el]=Διασύνδεση προσθέτου εκτύπωσης KOrganizer
+Name[en_GB]=KOrganizer Print Plugin Interface
 Name[es]=Interfaz del complemento de impresión de KOrganizer
 Name[et]=KOrganizeri trükkimisplugina liides
 Name[fr]=Interface de module d'impression d'agenda
@@ -40,14 +41,20 @@ Comment[af]=Korganizer Deel
 Comment[bg]=Модул KOrganizer
 Comment[br]=Perzh KOrganizer
 Comment[ca]=Part de KOrganizer
+Comment[cs]=KOrganizer Part
 Comment[cy]=KTrefnydd Part
+Comment[da]=KOrganizer Part
 Comment[de]=KOrganizer-Komponente
+Comment[el]=KOrganizer Part
+Comment[en_GB]=KOrganizer Part
 Comment[eo]=Organizilo-parto
 Comment[es]=Parte de KOrganizer
 Comment[et]=KOrganizeri komponent
 Comment[eu]=KOrganizer zatia
 Comment[fa]=بخش KOrganizer
+Comment[fi]=KOrganizer Part
 Comment[fr]=Composant KOrganizer
+Comment[fy]=KOrganizer Part
 Comment[ga]=Comhpháirt KOrganizer
 Comment[gl]=Parte KOrganizer
 Comment[he]=רכיב KOrganizer
@@ -64,6 +71,7 @@ Comment[lt]=KOrganizer dalis
 Comment[lv]=KOrganizer daļa
 Comment[mk]=Дел од КОрганизатор
 Comment[ms]=Bahagian KOrganizer
+Comment[nb]=KOrganizer Part
 Comment[nds]=KOrganizer-Komponent
 Comment[ne]=केडीई आयोजक भाग
 Comment[nl]=KOrganizer-component
@@ -82,6 +90,7 @@ Comment[ta]=கேஅமைப்பாளர் பகுதி
 Comment[tg]=Қисмати органайзер
 Comment[tr]=KOrganizer Parçası
 Comment[uk]=Складова KOrganizer
+Comment[vi]=KOrganizer Part
 Comment[xh]=Indawana yeKOrganizer
 Comment[x-test]=xxKOrganizer Partxx
 Comment[zh_CN]=KOrganizer 部件
