--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -21,6 +21,7 @@ Name[cs]=Vlastní stránky
 Name[da]=Brugervalgte sider
 Name[de]=Benutzerdefinierte Seiten
 Name[el]=Προσαρμοσμένες σελίδες
+Name[en_GB]=Custom Pages
 Name[eo]=Propraj Paĝoj
 Name[es]=Páginas personalizadas
 Name[et]=Omaloodud leheküljed
@@ -66,6 +67,7 @@ Name[tr]=Özel Sayfa
 Name[uk]=Нетипові сторінки
 Name[x-test]=xxCustom Pagesxx
 Name[zh_CN]=定制页
+Name[zh_TW]=Custom Pages
 Comment=Configure the Custom Pages
 Comment[af]=Stel die pasmaak blaaie op
 Comment[bg]=Настройки на потребителските полета
@@ -75,6 +77,7 @@ Comment[cs]=Nastavení vlastních stránek
 Comment[da]=Indstil de selvvalgte sider
 Comment[de]=Einstellungen für benutzerdefinierte Seiten
 Comment[el]=Ρύθμιση των προσαρμοσμένων σελίδων
+Comment[en_GB]=Configure the Custom Pages
 Comment[eo]=Agordi la proprajn paĝojn
 Comment[es]=Configurar las páginas personalizadas
 Comment[et]=Omaloodud lehekülgede seadistamine
