--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -17,12 +17,15 @@ Name[af]=Algemeen
 Name[be]=Агульныя
 Name[bg]=Общи
 Name[br]=Pennañ
+Name[ca]=General
 Name[cs]=Obecné
 Name[cy]=Cyffredinol
 Name[da]=Generelt
 Name[de]=Allgemein
 Name[el]=Γενικά
+Name[en_GB]=General
 Name[eo]=Ĝenerala
+Name[es]=General
 Name[et]=Üldine
 Name[eu]=Orokorra
 Name[fa]=عمومی
@@ -49,10 +52,12 @@ Name[nds]=Allgemeen
 Name[ne]=साधारण
 Name[nl]=Algemeen
 Name[nn]=Generelt
+Name[oc]=General
 Name[pa]=ਸਧਾਰਨ
 Name[pl]=Ogólne
 Name[pt]=Geral
 Name[pt_BR]=Geral
+Name[ro]=General
 Name[ru]=Главное
 Name[se]=Oppalaš
 Name[sk]=Všeobecné
@@ -66,6 +71,7 @@ Name[uz]=Umumiy
 Name[uz@cyrillic]=Умумий
 Name[x-test]=xxGeneralxx
 Name[zh_CN]=常规
+Name[zh_TW]=General
 Comment=KOrganizer Main Configuration
 Comment[af]=KOrganizer hoof opstelling
 Comment[bg]=Главни настройки за KOrganizer
@@ -76,6 +82,7 @@ Comment[cy]=Prif Ffurfweddiad KTrefnydd
 Comment[da]=KOrganizer hovedindstilling
 Comment[de]=Grundeinrichtung für KOrganizer
 Comment[el]=Κύρια ρύθμιση του KOrganizer
+Comment[en_GB]=KOrganizer Main Configuration
 Comment[eo]=KOrganizilo-Ĉefagordo
 Comment[es]=Configuración principal de KOrganizer
 Comment[et]=KOrganizeri põhiseadistused
