--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -9,6 +9,7 @@ Name[cs]=Modul židovského kalendáře
 Name[da]=Jødisk kalender-plugin
 Name[de]=Modul für jüdischen Kalender
 Name[el]=Πρόσθετο εβραϊκού ημερολογίου
+Name[en_GB]=Jewish Calendar Plugin
 Name[eo]=Judkalendar-kromaĵo
 Name[es]=Complemento de calendario judío
 Name[et]=Juudi kalendri plugin
@@ -58,6 +59,7 @@ Comment[cs]=Zobrazení všech dat v KOrganizeru také v židovském kalendáři.
 Comment[da]=Viser alle datoer i KOrganizer - også i det jødiske kalendersystem.
 Comment[de]=Zeigt alle Daten in KOrganizer auch im jüdischen Kalendarium an.
 Comment[el]=Εμφανίζει όλες τις ημερομηνίες στο korganizer και στο εβραϊκό ημερολογιακό σύστημα.
+Comment[en_GB]=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[es]=Muestra todas las fechas en KOrganizer también en el sistema de calendario judío.
 Comment[et]=Näitab KOrganizeris kõiki kuupäevi ka juudi kalendri järgi.
 Comment[fa]=همۀ تاریخهای KOrganizer، همچنین سیستم تقویم یهودی را نمایش می‌دهد.
