--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -2,11 +2,13 @@
 X-KDE-Library=korg_listprint
 Name=List Print Style
 Name[af]=Lys druk styl
+Name[bg]=List Print Style
 Name[ca]=Estil d'impressió en llista
 Name[cs]=Styl deníku - seznam
 Name[da]=Listeudskriftsstil
 Name[de]=Listen-Druckstil
 Name[el]=Στυλ εκτύπωσης λίστας
+Name[en_GB]=List Print Style
 Name[eo]=List-Presostilo
 Name[es]=Estilo de impresión de listas
 Name[et]=Nimekirja trükkimise stiil
@@ -55,6 +57,7 @@ Comment[cs]=tento modul umožňuje tisknout události a úlohy do seznamu.
 Comment[da]=Dette plugin gør at du kan udskrive begivenheder og opgaver på en liste.
 Comment[de]=Mit diesem Modul können Ereignisse und Aufgaben in Listenform ausgedruckt werden.
 Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε λίστες γεγονότων και προς υλοποίηση λίστες σε μορφή λίστας.
+Comment[en_GB]=This plugin allows you to print out events and to-dos in list form.
 Comment[es]=Este complemento le permite imprimir eventos y tareas pendientes en forma de lista.
 Comment[et]=See plugin võimaldab trükkida sündmusi ja ülesandeid nimekirjana.
 Comment[eu]=Plugin honek gertaerak eta egitekoak zerrenda moduan inprimatzeko aukera ematen dizu.
