--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -6,6 +6,7 @@ Name[cs]=Wikipedia modul 'Tento den v historii'
 Name[da]=Wikipedias 'denne dag i historien'-plugin
 Name[de]=Wikipedia-Modul „Dieser Tag in der Geschichte“
 Name[el]=Πρόσθετο 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
+Name[en_GB]=Wikipedia 'This Day in History' Plugin
 Name[es]=Complemento de «Este día en la historia» de la Wikipedia
 Name[et]=Wikipedia 'täna ajaloos' plugin
 Name[fi]=Wikipedian "Tämä päivä historiassa" -liitännäinen
@@ -40,6 +41,7 @@ Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèri
 Comment[da]=Dette plugin viser links til Wikipedias 'denne dag i historien'-sider
 Comment[de]=Dieses Modul stellt eine Verknüpfung auf „Dieser Tag in der Geschichte“ in Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
+Comment[en_GB]=This plugin provides links to Wikipedia's 'This Day in History' pages
 Comment[es]=Este complemento provee un enlace a la página «Este día en la historia» de la Wikipedia
 Comment[et]=See plugin näitab Wikipedia 'täna ajaloos' lehekülgi
 Comment[fr]=Ce module externe fourni un lien vers la page « Ce jour dans l'histoire » de Wikipédia
