add an active data parameter to the IncidenceFormatter::extensiveDisplayStr() and toolTipStr() to use in recurring Incidences so correct start/end/due dates can be displayed. kolab/issue3813
MERGE: e4 (already in trunk)


svn path=/branches/kdepim/enterprise/kdepim/; revision=1028964

--- a/Makefile.am
+++ b/Makefile.am
@@ -90,7 +90,7 @@ libkorganizer_la_SOURCES = komessagebox.cpp \
 	koeventview.cpp \
 	korganizeriface.skel kcalendariface.skel \
 	filtereditdialog.cpp filteredit_base.ui \
-	kowhatsnextview.cpp kocounterdialog.cpp \
+	kowhatsnextview.cpp \
 	kojournalview.cpp journalentry.cpp \
 	kocore.cpp mailscheduler.cpp \
 	kodaymatrix.cpp docprefs.cpp statusdialog.cpp\
