--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -61,7 +61,7 @@ GenericName[de]=Hintergrund-Erinnerungsfunktion für KOrganizer
 GenericName[el]=Δαίμονας πελάτη υπενθύμισης του KOrganizer
 GenericName[en_GB]=KOrganizer Reminder Dæmon Client
 GenericName[eo]=Kliento por la alarmo-demono de Organizilo
-GenericName[es]=Cliente del daemon de recordatorio de KOrganizer
+GenericName[es]=Cliente del demonio de recordatorio de KOrganizer
 GenericName[et]=KOrganizeri meeldetuletusdeemoni klientprogramm
 GenericName[eu]=KOrganizer-en oroigarrien deabruaren bezeroa
 GenericName[fa]=کارخواه شبح یادآوری KOrganizer
