add copy of KCal::Calendar, as transitional base class for AkonadiCalendar, porting away from KCal::Calendar
svn path=/branches/work/akonadi-ports/kdepim/; revision=1031644

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,6 +209,7 @@ if(KMAIL_SUPPORTED)
     stdcalendar.cpp
     koprefs.cpp kocore.cpp kohelper.cpp koidentitymanager.cpp cellitem.cpp
     akonadicalendar.cpp
+    calendarbase.cpp
     akonadicollectionview.cpp
     printing/calprinter.cpp
     printing/calprintpluginbase.cpp
