mark disabled code blocks with AKONADI_PORT_DISABLED instead of sebsauer, so we have one simple grep for all disabled code
svn path=/branches/work/akonadi-ports/kdepim/; revision=1032174

--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -100,7 +100,7 @@ GenericName[zh_CN]=KOrganizer 提醒守护进程的客户端
 GenericName[zh_TW]=KOrganizr 提醒守護程式客戶端
 Terminal=false
 
-#sebsauer; disabled atm
+#AKONADI_PORT_DISABLED(sebsauer) disabled atm
 Hidden=true
 
 X-KDE-autostart-after=panel
