Move classes only used by the incidence editor into its subdir. Make it build with all kinds of stuff commented out, mostly KOPrefs and KOGlobals, plus freebusy handling. Will have to pull that into a separate lib, probably.
svn path=/branches/work/akonadi-ports/kdepim/; revision=1032195

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,12 +109,9 @@ if(KMAIL_SUPPORTED)
 
   ########### next target ###############
 
-  set(korganizer_eventviewer_LIB_SRCS koeventviewer.cpp urihandler.cpp koeventviewerdialog.cpp komailclient.cpp)
+  set(korganizer_eventviewer_LIB_SRCS koeventviewer.cpp koeventviewerdialog.cpp komailclient.cpp)
 
 
-  qt4_add_dbus_interfaces(korganizer_eventviewer_LIB_SRCS org.kde.korganizer.Korganizer.xml)
-  qt4_add_dbus_interfaces(korganizer_eventviewer_LIB_SRCS ${CMAKE_BINARY_DIR}/kmail/org.kde.kmail.kmail.xml)
-  qt4_add_dbus_interfaces(korganizer_eventviewer_LIB_SRCS ${CMAKE_SOURCE_DIR}/knode/org.kde.knode.xml)
 
   kde4_add_library(korganizer_eventviewer SHARED ${korganizer_eventviewer_LIB_SRCS})
   add_dependencies(korganizer_eventviewer kmail_xml)
@@ -192,7 +189,6 @@ if(KMAIL_SUPPORTED)
     exportwebdialog.cpp
     kocorehelper.cpp
     incidencechanger.cpp
-    templatemanagementdialog.cpp
     stdcalendar.cpp
     koprefs.cpp kocore.cpp kohelper.cpp koidentitymanager.cpp cellitem.cpp
     akonadicalendar.cpp
