--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -18,7 +18,7 @@ Name[bg]=Свободно/заето
 Name[ca]=Lliure/ocupat
 Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
-Name[da]=Fri/Optaget
+Name[da]=Ledig/optaget
 Name[de]=Frei/Belegt
 Name[el]=Free/Busy
 Name[en_GB]=Free/Busy
@@ -75,7 +75,7 @@ Comment[bg]=Настройки на свободно/заето за KOrganizer
 Comment[ca]=Configuració de Lliure/ocupat per a KOrganizer
 Comment[cs]=Nastavení aktivity pro KOrganizer
 Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
-Comment[da]=KOrganizer Fri/Optaget-indstilling
+Comment[da]=KOrganizer indstilling af ledig/optaget
 Comment[de]=Frei/Belegt-Festlegung für KOrganizer
 Comment[el]=Ρυθμίσεις KOrganizer Free/Busy
 Comment[en_GB]=KOrganizer Free/Busy Configuration
