link again, export symbols
svn path=/branches/work/akonadi-ports/kdepim/; revision=1032240

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,6 +229,7 @@ if(KMAIL_SUPPORTED)
     ${KDEPIMLIBS_AKONADI_LIBS}
     korganizer_eventviewer korganizer_interfaces
     kdepim
+    kdepimdbusinterfaces
     korg_incidenceeditor
   )
 
