port to Akonadi::Item
svn path=/branches/work/akonadi-ports/kdepim/; revision=1033131

--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -49,6 +49,7 @@ target_link_libraries(korg_incidenceeditor
    ${KDEPIMLIBS_KCAL_LIBS}
    kdepim
    kdepimdbusinterfaces
+   akonadi-kcal
 )
 
 set_target_properties(korg_incidenceeditor PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION})
