--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 include_directories( 
     ${CMAKE_SOURCE_DIR}/korganizer/interfaces 
     ${CMAKE_SOURCE_DIR}/korganizer/incidenceeditor
@@ -6,7 +5,6 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/kdgantt1
     ${CMAKE_SOURCE_DIR}/libkdepimdbusinterfaces
 )
-
 
 ########### next target ###############
 
@@ -54,3 +52,11 @@ target_link_libraries(korg_incidenceeditor
 
 set_target_properties(korg_incidenceeditor PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION})
 install(TARGETS korg_incidenceeditor ${INSTALL_TARGETS_DEFAULT_ARGS})
+
+########### next target ###############
+
+set(incidenceeditorapp_SRCS main.cpp)
+qt_wrap_cpp(incidenceeditorapp ${incidenceeditorapp_SRCS} main.cpp)
+kde4_add_executable(incidenceeditorapp ${incidenceeditorapp_SRCS})
+target_link_libraries(incidenceeditorapp  ${KDE4_KDEUI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} akonadi-kcal korg_incidenceeditor)
+#install(TARGETS incidenceeditorapp ${INSTALL_TARGETS_DEFAULT_ARGS})
