--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
 
 set( korg_incidenceeditor_LIB_SRCS 
     ${libkdgantt1_SRCS}
+    koeditorconfig.cpp
     koincidenceeditor.cpp
     koeventeditor.cpp
     kotodoeditor.cpp
