--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="414">
+<kpartgui name="korganizer" version="415">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -155,6 +155,8 @@
     <Action name="new_journal"/>
     <Separator/>
     <Action name="edit_paste"/>
+    <Separator/>
+    <Action name="configure_view"/>
     <Merge/>
   </Menu>
 
