add an optional config dialog for views, start one for multiagendaview
svn path=/branches/work/akonadi-ports/kdepim/; revision=1041820

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,7 +224,7 @@ if(KMAIL_SUPPORTED)
   kde4_add_kcfg_files(korganizerprivate_LIB_SRCS htmlexportsettings.kcfgc )
 
   kde4_add_ui_files(korganizerprivate_LIB_SRCS
-    viewconfigurationwidget.ui
+    multiagendaviewconfigwidget.ui
     filteredit_base.ui publishdialog_base.ui kogroupwareprefspage.ui searchdialog_base.ui timescaleedit_base.ui
     printing/calprintincidenceconfig_base.ui printing/calprintdayconfig_base.ui printing/calprintmonthconfig_base.ui printing/calprinttodoconfig_base.ui printing/calprintweekconfig_base.ui
   )
