--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="414">
+<kpartgui name="korganizer" version="415">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -47,12 +47,6 @@
       <Action name="view_timespent"/>
       <Action name="view_timeline"/>
       <Separator/>
-      <Action name="view_day"/>
-      <Action name="view_nextx"/>
-      <Action name="view_workweek"/>
-      <Action name="view_week"/>
-      <Action name="view_month"/>
-      <Separator/>
       <Action name="view_list"/>
       <Action name="view_todo"/>
       <Action name="view_journal"/>
@@ -72,11 +66,16 @@
         <Action name="zoom_out_vertically"/>
       </Menu>
     </Menu>
-    <Menu name="go"><text>&amp;Go</text>
+    <Menu name="dates"><text>&amp;Dates</text>
       <Action name="go_previous"/>
       <Action name="go_next"/>
       <Separator/>
       <Action name="go_today"/>
+      <Separator/>
+      <Action name="select_day"/>
+      <Action name="select_nextx"/>
+      <Action name="select_workweek"/>
+      <Action name="select_week"/>
     </Menu>
     <Menu name="actions"><text>&amp;Actions</text>
       <Action name="new_event"/>
