--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -53,7 +53,7 @@
         <Action name="zoom_out_vertically"/>
       </Menu>
     </Menu>
-    <Menu name="dates"><text>&amp;Dates</text>
+    <Menu name="go"><text>&amp;Go</text>
       <Action name="go_previous"/>
       <Action name="go_next"/>
       <Separator/>
