re-add "Day" and "Week" to the toolbar. remove the "Select" prefixes again, instead rename "Month" to "Month View" to distinguish it from "Week" and "Day", which select ranges.
svn path=/branches/work/akonadi-ports/kdepim/; revision=1044275

--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="415">
+<kpartgui name="korganizer" version="416">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -138,8 +138,11 @@
     -->
     <Separator/>
     <Action name="go_previous"/>
-    <Action name="go_today"/>
     <Action name="go_next"/>
+
+    <Action name="go_today"/>
+    <Action name="select_day"/>
+    <Action name="select_week"/>
   </ToolBar>
 
   <ToolBar noMerge="1" name="korganizer_toolbar"><text>Views</text>
