--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -57,6 +57,7 @@ Comment[nb]=Organizer med D-Bus-grensesnitt
 Comment[nds]=En Daagpleger mit en D-Bus-Koppelsteed
 Comment[nl]=Organizer met een D-Bus-interface
 Comment[nn]=Organiserar med eit D-Bus-grensesnitt
+Comment[pl]=Organizator z interfejsem D-Bus
 Comment[pt]=Organizador com uma interface de D-Bus
 Comment[pt_BR]=Organizador com interface D-Bus
 Comment[ro]=Organizator cu interfață D-Bus
