--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -102,7 +102,10 @@ Terminal=false
 
 X-KDE-autostart-after=panel
 X-KDE-autostart-condition=korgacrc:General:Autostart:true
+X-DBUS-StartupType=Unique
 
 #do not uncomment the following line, else autostart fails
 #NoDisplay=true
 OnlyShowIn=KDE;
+
+
