--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -49,6 +49,7 @@ Comment[et]=Korraldaja D-Busi liidesega
 Comment[fr]=Agenda avec une interface D-Bus
 Comment[ga]=Eagraí a bhfuil comhéadan D-Bus aige
 Comment[gl]=Organizador con interface D-Bus
+Comment[hu]=Határidőnapló D-Bus-os felülettel
 Comment[it]=Agenda con un'interfaccia D-Bus
 Comment[ja]=D-Bus インターフェースを持つカレンダー
 Comment[km]=កម្មវិធី​រៀបចំ​ជាមួយ​ចំណុច​ប្រទាក់ D-Bus
