--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -41,7 +41,7 @@ Name[pl]=Kolory i czcionki
 Name[pt]=Cores e Tipos de Letra
 Name[pt_BR]=Fontes e cores
 Name[ro]=Culori și fonturi
-Name[ru]=Цветы и шрифты
+Name[ru]=Цвета и шрифты
 Name[sl]=Barve in pisave
 Name[sv]=Färger och teckensnitt
 Name[th]=สีและแบบอักษร
